2005-09-05 Hasso Tepper <hasso at quagga.net>

	* *.c: Try to be less verbose by default (without any debug options
	  on).
	* isis_lsp.c (lsp_build_nonpseudo): Use stream_reset() instead of
	  touching endp directly.
	* isis_lsp.c (lsp_build_pseudo): Ditto.

2005-09-03 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Yet another regression introduced by stream cleanup.
	  Similar fix to the one commited to lsp_build_nonpseudo() some days
	  ago.

2005-09-01 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Less TLV leaking.

2005-09-01 Hasso Tepper <hasso at quagga.net>

	* random.c, spgrid.[ch]: Fix warnings with hope that I didn't broke
	  anything. These floats to longs and vice versa casts are starnge
	  indeed.
	* isis_pdu.c: As we don't use %z for size_t for now because we support
	  older compilers, cast them to unsigned long.

2005-09-01 Hasso Tepper <hasso at quagga.net>

	* isis_adjacency.c, isis_lsp.c, isisd.c: Replace XMALLOC && memset
	  with XCALLOC.
	* isis_lsp.c (lsp_build_pseudo): Fix adding ES neighbour.
	* isis_tlv.c: More compact free_tlvs() function.
	* isis_lsp.c (lsp_build_nonpseudo) : Try to fix one more regression
	  introduced by stream cleanup. Seek endp to the right place before
	  starting to fill stream with TLVs.

2005-08-16 Hasso Tepper <hasso at quagga.net>

	* isis_misc.[ch]: Fix some warnings, making some strings const.

2005-08-10 Hasso Tepper <hasso at quagga.net>

	* topology/spgrid.c: MAXLONG is deprecated, use LONG_MAX instead.
	  values.h, where MAXLONG is defined, is deprecated as well.

2005-05-26 Yossi Boaron <Yossi.Boaron@veraznetworks.com>

	* isis_dr.c: Fix copy&paste error in isis_dr_resign().

2005-05-25 Paul Jakma <paul@dishone.st>

	* isisd.c: (show_isis_generated_topology) change to _RO version
	  of list macro. remove the extra listnode variable. one of the
	  macros had had incorrect number of arguments.

2005-05-03 Paul Jakma <paul@dishone.st>

	* (general) More cleaning up of stream abuse, isisd should be